# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16270.ebuild:
  Drop totally faulty version

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16270.ebuild:
  dekeyword 2.2.01.16270 as it seems to have weird issues with merging
  packages

*portage-2.2.01.16270 (05 Sep 2010)

  05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.16270.ebuild:
  Bump, many main-stream EROOT support changes, includes fix for bug #334271

*portage-2.2.01.15553 (09 Aug 2010)

  09 Aug 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.15478.ebuild, +portage-2.2.01.15553.ebuild:
  Replace last snapshot by one that is tested better

*portage-2.2.01.15478 (07 Aug 2010)

  07 Aug 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.15354-r1.ebuild, +portage-2.2.01.15478.ebuild:
  Bump snapshot

*portage-2.2.01.15417 (23 Jul 2010)

  23 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.15417.ebuild:
  Version bump, includes darkside's redundant mirror patch

*portage-2.2.01.15354-r1 (22 Jul 2010)

  22 Jul 2010; Jeremy Olexa <darkside@gentoo.org>
  +files/0001-emerge-webrsync-Redundant-Mirroring.patch,
  +portage-2.2.01.15354-r1.ebuild:
  Add emerge-webrsync patch to use a redundant mirror

*portage-2.2.01.15354 (07 Jul 2010)

  07 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15819.ebuild, -portage-2.2.01.15352.ebuild,
  +portage-2.2.01.15354.ebuild:
  Bump, shebang fixing now also considers scripts that are symlinked from
  inside path but reside outside path

*portage-2.2.01.15352 (02 Jul 2010)

  02 Jul 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.15352.ebuild:
  New snapshot, first one off git/hg

*portage-2.2.00.15842-r1 (24 Apr 2010)

  24 Apr 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15842.ebuild, +portage-2.2.00.15842-r1.ebuild,