@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.16365 (17 Sep 2010)
+
+  17 Sep 2010; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.01.16365.ebuild:
+  Bump, this release has patched up EROOT support from master
+
   05 Sep 2010; Fabian Groffen <grobian@gentoo.org>
   -portage-2.2.01.16270.ebuild:
   Drop totally faulty version
